snapshots/noye__modules__youtube__tests__upcoming-2.snap
---
source: src/modules/youtube/mod.rs
expression: "responses.get_say::<responses::Youtube>()"
---
Live:
  channel: "[channel]"
  id: WsRUC73L-MA
  title: "[title]"
  ts: ""
  viewers: "[viewers]"
